--- a/module-2/package.json
+++ b/module-2/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "comp693",
+  "name": "module01",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "compile": "babel src/index.js --presets @babel/preset-env,@babel/preset-react --out-file public/index.js",
-    "watch": "babel src --presets @babel/react src --out-dir public --watch --verbose",
-    "start": "nodemon"
+    "start": "nodemon app.js",
+    "compile": "babel src/employees.jsx --presets @babel/react src/employees.jsx --out-dir public",
+    "watch": "babel src --presets @babel/react src --out-dir public --watch --verbose"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
   "devDependencies": {
-    "@babel/cli": "^7.22.5",
-    "@babel/core": "^7.22.5",
-    "@babel/preset-env": "^7.22.5",
-    "@babel/preset-react": "^7.22.5",
-    "express": "^4.18.2",
-    "nodemon": "^2.0.22",
-    "webpack-cli": "^5.1.4"
+    "@babel/cli": "^7.21.5",
+    "@babel/core": "^7.21.8",
+    "@babel/preset-react": "^7.18.6",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "express": "^4.18.2",
+    "nodemon": "^2.0.22"
+  }
 }
