--- a/module-3/package.json
+++ b/module-3/package.json
@@ -2,25 +2,32 @@
   "name": "module01",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "type": "module",
+  "main": "app.js",
   "scripts": {
     "start": "nodemon app.js",
-    "compile": "babel src/employees.jsx --presets @babel/react src/employees.jsx --out-dir public",
-    "watch": "babel src --presets @babel/react src --out-dir public --watch --verbose"
+    "compile": "webpack",
+    "watch": "webpack --watch"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.21.5",
-    "@babel/core": "^7.21.8",
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.19.1",
+    "@babel/preset-env": "^7.22.5",
     "@babel/preset-react": "^7.18.6",
-    "@types/react": "^18.2.6",
-    "@types/react-dom": "^18.2.4"
+    "babel-loader": "^9.1.2",
+    "nodemon": "^2.0.20",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "nodemon": "^2.0.22"
+    "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.1",
+    "mongoose": "^6.7.0"
   }
 }
