--- a/module-3/package.json
+++ b/module-3/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "nodemon app.js",
     "compile": "webpack",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "build": "webpack --mode production --entry ./public/employees.js --output-path ./public"
   },
   "type": "module",
   "keywords": [],
