--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-react": "^7.22.5",
     "express": "^4.18.2",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "webpack": "^5.86.0",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {}
 }
