--- a/module-4/package.json
+++ b/module-4/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "nodemon app.js",
     "compile": "webpack",
-    "watch": "webpack --watch",
-    "webpack": "node -r @babel/register ./node_modules/webpack-cli/bin/cli.js --config webpack.config.js"
+    "watch": "webpack --watch"
   },
   "type": "module",
   "keywords": [],
